--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-\backend\Vedspace_OTP_Verification\Vedspace_OTP_Verification\secret.sh
+\Backend_auth\Vedspace_OTP_Verification\Vedspace_OTP_Verification\secret.sh
